--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,14 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+#Xcode project files
+project.pbxproj
+project.xcworkspace
+xcuserdata
+
+#Xcode project for THIS project
+rsrc/
+
+#editor temporaries
+*.swp
